# OpenGLESRenderTest

./: build.gradle  gradle.properties  gradlew  gradlew.bat  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Untitled.mtl
app/src/main/cpp/: CMakeLists.txt  fs.glsl  triangle_renderer.cpp
app/src/main/java/com/example/openglestriangle/: MainActivity.java  Triangle.java  TriangleRenderer.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
